--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -61,6 +61,7 @@
     <Compile Include="collections\IsInGenre.cs" />
     <Compile Include="collections\IsPublishedBy.cs" />
     <Compile Include="collections\Match.cs" />
+    <Compile Include="collections\MatchFactory.cs" />
     <Compile Include="collections\Movie.cs" />
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="utility\filtering\IMatchAn.cs" />
     <Compile Include="utility\filtering\MatchExtensions.cs" />
     <Compile Include="utility\filtering\OrMatch.cs" />
+    <Compile Include="utility\filtering\AttributeAccessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
