--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -71,6 +71,7 @@
     <Compile Include="utility\filtering\IMatchAn.cs" />
     <Compile Include="utility\filtering\MatchExtensions.cs" />
     <Compile Include="utility\filtering\MatchFactory.cs" />
+    <Compile Include="utility\filtering\NegatingMatch.cs" />
     <Compile Include="utility\filtering\NeverMatches.cs" />
     <Compile Include="utility\filtering\OrMatch.cs" />
     <Compile Include="utility\filtering\AttributeAccessor.cs" />
