--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="collections\ComparableMatchFactory.cs" />
     <Compile Include="collections\Genre.cs" />
     <Compile Include="collections\IsInGenre.cs" />
     <Compile Include="collections\IsPublishedBy.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="utility\Condition.cs" />
     <Compile Include="utility\EnumerableExtensions.cs" />
     <Compile Include="utility\filtering\AnonymousMatch.cs" />
+    <Compile Include="utility\filtering\ICreateMatchers.cs" />
     <Compile Include="utility\filtering\IMatchAn.cs" />
     <Compile Include="utility\filtering\MatchExtensions.cs" />
     <Compile Include="utility\filtering\MatchFactory.cs" />
