--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="collections\Genre.cs" />
+    <Compile Include="collections\IProvideAccessToCreateMatchers.cs" />
     <Compile Include="collections\IsInGenre.cs" />
     <Compile Include="collections\IsPublishedBy.cs" />
     <Compile Include="collections\Match.cs" />
