--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -84,6 +84,8 @@
     <Compile Include="utility\filtering\OrMatch.cs" />
     <Compile Include="utility\filtering\IGetAnAttributeValue.cs" />
     <Compile Include="utility\ranges\IContainValues.cs" />
+    <Compile Include="utility\Sorting\AttributeSorting.cs" />
+    <Compile Include="utility\Sorting\Compare.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
